# perception_neuron_ros

./: .gitignore  CMakeLists.txt  README.md  config.txt
ros_lib/cob_msgs/: AccessPoint.h  BatteryServer.h  BatteryServer2.h  BatteryState.h  BatteryState2.h  DashboardState.h  EmergencyStopState.h  Network.h  PowerBoardState.h  PowerState.h  SiteSurvey.h
ros_lib/cob_srvs/: SetFloat.h  SetInt.h  SetString.h
ros_lib/manipulation_msgs/: CartesianGains.h  Grasp.h
ros_lib/moveit_msgs/: AttachedCollisionObject.h  ConstraintEvalResult.h  ContactInformation.h  CostSource.h  GetCartesianPath.h  GetMotionPlan.h  Grasp.h  JointConstraint.h  JointLimits.h  LinkPadding.h  LinkScale.h  MotionPlanDetailedResponse.h  MotionPlanRequest.h  MotionPlanResponse.h  MoveGroupAction.h  MoveGroupActionGoal.h  MoveGroupGoal.h  MoveGroupResult.h  OrientationConstraint.h  PickupGoal.h  PlaceGoal.h  PlanningOptions.h  PositionConstraint.h  VisibilityConstraint.h
ros_lib/octomap_msgs/: Octomap.h
ros_lib/ros/: node_handle.h
src/: PerceptionNeuronROSserial.cpp  stdafx.cpp
